# rag-modulo-mlflow

./: .gitignore  Dockerfile  LICENSE  README.md  poetry.toml  pyproject.toml
.github/workflows/: build-and-publish.yaml
